--- a/Views/contatosFaleconosco/contatosFaleconosco.cshtml
+++ b/Views/contatosFaleconosco/contatosFaleconosco.cshtml
@@ -8,8 +8,8 @@
                      <!--***********************************************************************************************************************************-->   
                         
                            <div class="row   text-warning">
-                            <div class="col-md-2 col-lg-3"></div>
-                                <div class=" col-sm-12 col-md-8 col-lg-6 ">
+                            <div class="  col-sm-12 col-md-2 col-lg-3"></div>
+                                <div class="col-sm-12 col-md-8 col-lg-6 ">
                                     <div id="euEscuto">
                                         <h5> acesse nossos canais de comunicação</h5>
                                         <h5>whastsupp: (11)99999-9999</h5>
@@ -17,7 +17,7 @@
                                         <h5>E-mail: infoCelEletronics.com.senac</h5>
                                     </div>
                              </div>
-                                <div class="col-md-2 col-lg-3"></div>
+                                <div class="col-sm-12 col-md-2 col-lg-3"></div>
                          </div>
                       
           <!--***********************************************************************************************************************************-->   
@@ -25,7 +25,7 @@
 
                          <div class="row">
                             <div class="col-md-2 col-lg-3"></div>
-                                <div class=" col-sm-12 col-md-8 col-lg-6 text-warning ">
+                                <div class="col-sm-12 col-md-8 col-lg-6 text-warning ">
                                     <div id="vcFala">
                                         <h5>Envie nos uma mensagem agora</h5>
                                     </div>
@@ -37,17 +37,17 @@
                       
                          <div class="row te">
                             <div class="col-md-2 col-lg-3 "></div>  
-                            <div class=" col-sm-12 col-md-8 col-lg-6 text-info ">        
+                            <div class="  col-sm-12 col-md-8 col-lg-6 text-info ">        
                                 
                                 <form method="post"  asp-action="contatosFaleconosco">
                                                 
                                     
                                     <div class="row">
                                          <div class="col-md-2 col-lg-2 "></div>  
-                                        <div class=" col-sm-12 col-md-8 col-lg-8 text-warning "> 
+                                        <div class="  col-sm-12 col-md-8 col-lg-8 text-warning "> 
 
                                     <label asp-for="msgTexto"> <strong> Digite aqui sua mensagem </strong></label> <br>
-                                <textarea class="bg-light" asp-for="msgTexto" class="text-light" rows="10" cols="50" required value="" ></textarea><br>
+                                <textarea class="bg-light form-control" asp-for="msgTexto" class="text-light" rows="10" required value="" ></textarea><br>
                                     
                                         </div>
                                          <div class="col-md-2 col-lg-2 "></div>  
